--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -5,3 +5,18 @@ $dark-transparent-30: rgba(0, 0, 0, 0.3);
 $dark-transparent-20: rgba(0, 0, 0, 0.2);
 $dark-transparent-40: rgba(0, 0, 0, 0.4);
 $dark-transparent-70: rgba(0, 0, 0, 0.7);
+
+.scrollbar-green {
+  &::-webkit-scrollbar {
+    width: 7px;
+
+    &-thumb {
+      background-color: rgba($color-primary, 0.2);
+      border-radius: 10px;
+    }
+
+    &-track {
+      background: transparent;
+    }
+  }
+}
