--- a/src/app/shared/components/recent-searches/recent-searches.component.html
+++ b/src/app/shared/components/recent-searches/recent-searches.component.html
@@ -1,8 +1,7 @@
 <input
   type="text"
-  [(ngModel)]="searchText"
   placeholder="{{ 'placeholder-input-search' | translate }}"
-  (keyup.Enter)="search()"
+  [formControl]="inputSearch"
 />
 
 <div class="suggestions flex">
