feat: search - search right panel finished

--- a/src/app/shared/components/recent-searches/recent-searches.component.html
+++ b/src/app/shared/components/recent-searches/recent-searches.component.html
@@ -4,8 +4,16 @@
   [formControl]="inputSearch"
 />
 
-<div class="suggestions flex">
-  <span *ngFor="let search of recentSearches" (click)="setSearch(search)">
-    {{ search }}
+<div class="suggestions flex scrollbar-green">
+  <span
+    class="suggestions-item"
+    *ngFor="let search of recentSearches"
+    (click)="setSearch(search)"
+  >
+    {{ search.name }}
   </span>
+
+  <span class="no-results" *ngIf="noResults">{{
+    "no-results-search" | translate
+  }}</span>
 </div>
