feat: modal-settings - finished modal settings and litle adjusts

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="musics scrollbar-green">
-  <span class="title-bg mt-4"> {{ "title-top-artist" | translate }} </span>
+  <span class="title-bg mt-4"> {{ "title.top-artist" | translate }} </span>
 
   <app-top-artist class="mt-2 d-block"></app-top-artist>
 
