--- a/src/app/pages/list-music/list-music.component.html
+++ b/src/app/pages/list-music/list-music.component.html
@@ -10,7 +10,7 @@
     ></app-banner>
 
     <div class="title-bg mt-7">
-      {{ "musics-playlist" | translate }} {{ title }}
+      {{ "title.musics-playlist" | translate }} {{ title }}
     </div>
 
     <app-table-songs [listMusics]="musics"></app-table-songs>
