--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,7 +5,7 @@
 
   <img
     src="../../../assets/images/spotify-logo-inicio.png"
-    alt="{{ 'alt-logo.home' | translate }}"
+    alt="{{ 'alt.logo-home' | translate }}"
   />
 
   <button type="button" (click)="redirectToLogin()">
