--- a/src/app/shared/components/recent-searches/recent-searches.component.html
+++ b/src/app/shared/components/recent-searches/recent-searches.component.html
@@ -1,3 +1,5 @@
+<span class="title-md">{{ "title.search-playlist" | translate }}</span>
+
 <input
   type="text"
   placeholder="{{ 'placeholder-input-search' | translate }}"
