--- a/src/app/shared/components/switch-translate/switch-translate.component.html
+++ b/src/app/shared/components/switch-translate/switch-translate.component.html
@@ -2,7 +2,7 @@
   <button type="button" (click)="changeLanguage()">
     <img
       src="../../../assets/icons/translate-green-ligth.png"
-      alt="{{ 'alt-icon.translate' | translate }}"
+      alt="{{ 'alt.icon-translate' | translate }}"
     />
   </button>
 
