--- a/src/app/shared/components/top-artists/top-artists.component.html
+++ b/src/app/shared/components/top-artists/top-artists.component.html
@@ -1,4 +1,4 @@
-<span class="title-md">{{ "title-top-artists" | translate }}</span>
+<span class="title-md">{{ "title.top-artists" | translate }}</span>
 
 <app-artist-image
   *ngFor="let artist of artists"
