--- a/src/app/shared/components/player-card/player-card.component.scss
+++ b/src/app/shared/components/player-card/player-card.component.scss
@@ -3,7 +3,6 @@
 .container {
   width: 100%;
   height: 100%;
-  max-width: 200px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -21,15 +20,20 @@
     background-color: $dark-transparent-70;
     flex-grow: 1;
     color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
 
     span {
       font-size: 0.9rem;
       font-weight: 700;
+      width: 100%;
+      text-align: center;
     }
 
     .buttons {
       width: 100%;
-      height: 100%;
       display: flex;
       justify-content: space-evenly;
       align-items: center;
