--- a/src/app/shared/components/recent-searches/recent-searches.component.scss
+++ b/src/app/shared/components/recent-searches/recent-searches.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   input {
+    margin-top: 5px;
     width: 100%;
     padding: 10px 5px;
     border-radius: 8px;
@@ -41,10 +42,7 @@
       border-radius: 20px;
       cursor: pointer;
       word-break: break-word;
-
-      &:not(:first-child) {
-        margin-top: 10px;
-      }
+      margin: 5px 5px 5px 0px;
 
       &:hover {
         background-color: rgba($color-primary, 0.8);
